List Nft with solana implemented

--- a/src/app/modules/authentication/components/create-nft-page/create-nft-page.component.html
+++ b/src/app/modules/authentication/components/create-nft-page/create-nft-page.component.html
@@ -107,21 +107,21 @@
       <div class="col-md-12 col-lg-1">
         <!-- Gap creator -->
       </div>
-      <div class="col-md-12 col-lg-4">
+      <div class="col-md-12 col-lg-5">
         <div class="row">
           <div class="col-sm-12 col-md-6 col-lg-12 col-xl-12 p-1">
             <div class="request-boxes mt-4">
               <div class="heading-box">
-                <table>
+                <table style="width: 100%;">
                   <tr>
                     <td
                       class="headings"
-                      style="width: 270px; padding: 20px 20px"
+                      style="width: 73%; padding: 20px 20px"
                     >
                       Shell/cURL
                     </td>
-                    <td>
-                      <button class="copy-btn" (click)="copyCurl()">
+                    <td style="width: 30%; position: relative;">
+                      <button class="copy-btn" style="position: absolute; right: 10px; bottom:10px;" (click)="copyCurl()">
                         Copy
                       </button>
                     </td>
@@ -139,16 +139,16 @@
           <div class="col-sm-12 col-md-6 col-lg-12 col-xl-12 p-1">
             <div class="request-boxes mt-4">
               <div class="heading-box">
-                <table>
+                <table style="width: 100%;">
                   <tr>
                     <td
                       class="headings"
-                      style="width: 222px; padding: 20px 20px"
+                      style="width: 55%; padding: 20px 20px"
                     >
                       Response
                     </td>
-                    <td>
-                      <button class="copy-btn" (click)="copyTokenId()">
+                    <td style="width: 30%; position: relative;">
+                      <button class="copy-btn" style="position: absolute; right: 10px; bottom:10px;" (click)="copyTokenId()">
                         Copy Token ID
                       </button>
                     </td>
