--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -19,7 +19,7 @@
                       alt="Shyft Email"/></a
                 ></span>
                 <span class="footer-icons"
-                  ><a href="https://twitter.com/shyft_api" target="_blank"
+                  ><a href="https://twitter.com/shyft_to" target="_blank"
                     ><img
                       src="assets/images/Icons/small-twitter.svg"
                       alt="Shyft Twitter"/></a
