--- a/src/app/modules/shared/components/loader/loader.component.html
+++ b/src/app/modules/shared/components/loader/loader.component.html
@@ -1,1 +1,1 @@
-<div [ngClass]="isLoaded ? 'loader-close' : 'loader'" data-wordLoad="Minting..."></div>
+<div [ngClass]="isLoaded ? 'loader-close' : 'loader'" data-wordLoad="Please wait..."></div>
