--- a/src/app/modules/shared/components/side-nav/side-nav.component.html
+++ b/src/app/modules/shared/components/side-nav/side-nav.component.html
@@ -23,7 +23,7 @@
   <a routerLink="/dashboard/read-nft" [ngClass]="page === 2 ? 'active' : ''" (click)="navigatePage(2)"
     >Read NFTs</a
   >
-  <!-- <a routerLink="/dashboard/list-nft" [ngClass]="page === 3 ? 'active' : ''" (click)="navigatePage(3)"
-    >List NFTs</a
-  > -->
+  <a routerLink="/dashboard/list-nft" [ngClass]="page === 3 ? 'active' : ''" (click)="navigatePage(3)"
+    >List NFTs (Alpha)</a
+  >
 </div>
