--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -5,7 +5,9 @@
     <div class="row">
       <div class="col-sm-12 col-md-6 col-lg-8">
         <div class="hero-text-box">
-          <h1 class="text-uppercase hero-heading">shyft</h1>
+          <h1 class="text-uppercase hero-heading gradient-text-hero">
+            shyft<sup class="gradient-text-hero" style="text-transform: none; font-size: 0.3em; top: -2em; line-height: 0;">(α)</sup>
+          </h1>
           <h3 class="hero-sub-heading">
             APIs For Frictionless NFT integration
           </h3>
@@ -16,11 +18,15 @@
             </p>
           </div>
           <div class="hero-button-container">
-           <a routerLink="/get-api-key"><button class="btn-solid-reg">Try Shift for Free</button></a>
+            <a routerLink="/get-api-key"
+              ><button class="btn-solid-reg">Try Shift for Free</button></a
+            >
             <p class="p-para-normal">
               If you already have an API key,
-              <a class="gradient-text" routerLink="/dashboard"><b>click here</b></a> to
-              continue
+              <a class="gradient-text" routerLink="/dashboard"
+                ><b>click here</b></a
+              >
+              to continue
             </p>
           </div>
         </div>
@@ -42,10 +48,15 @@
           </div>
         </div>
         <div class="hero-button-container-2 text-center">
-          <a routerLink="/get-api-key"><button class="btn-solid-reg">Try Shift for Free</button></a>
+          <a routerLink="/get-api-key"
+            ><button class="btn-solid-reg">Try Shift for Free</button></a
+          >
           <p class="p-para-normal">
             If you already have an API key,
-            <a class="gradient-text" routerLink="/dashboard"><b>click here</b></a> to continue
+            <a class="gradient-text" routerLink="/dashboard"
+              ><b>click here</b></a
+            >
+            to continue
           </p>
         </div>
       </div>
@@ -87,7 +98,10 @@
           <div class="row pt-5">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
               <div class="why-us-img-container">
-                <img src="assets/images/Money-bag-man.png" alt="Cost Effective" />
+                <img
+                  src="assets/images/Money-bag-man.png"
+                  alt="Cost Effective"
+                />
               </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-7">
@@ -202,9 +216,10 @@
           <div class="pt-3 text-center text-md-start">
             <span class="inline-image"
               ><a href="https://discord.gg/UypKpEH9" target="_blank"
-                ><img src="assets/images/Icons/discord.svg" alt="Shyft Discord" /><span
-                  >Discord</span
-                ></a
+                ><img
+                  src="assets/images/Icons/discord.svg"
+                  alt="Shyft Discord"
+                /><span>Discord</span></a
               ></span
             >
           </div>
@@ -213,17 +228,25 @@
             request features and get support on our channel.
           </p>
           <div class="text-center text-md-start">
-            <a href="https://discord.gg/UypKpEH9" target="_blank"><button class="btn-solid-reg">Join community</button></a>
+            <a href="https://discord.gg/UypKpEH9" target="_blank"
+              ><button class="btn-solid-reg">Join community</button></a
+            >
           </div>
           <p class="p-para text-center text-md-start">
             Show some love on our social handles...Follow us
           </p>
           <div class="text-center text-md-start">
             <span class="icon"
-              ><a href="https://twitter.com/shyft_api" target="_blank"><img src="assets/images/Icons/twitter.svg" alt="Shyft Twitter" /></a
+              ><a href="https://twitter.com/shyft_to" target="_blank"
+                ><img
+                  src="assets/images/Icons/twitter.svg"
+                  alt="Shyft Twitter" /></a
             ></span>
             <span class="icon"
-              ><a href="https://github.com/Shyft-to" target="_blank"><img src="assets/images/Icons/github.svg" alt="Shyft GitHub" /></a
+              ><a href="https://github.com/Shyft-to" target="_blank"
+                ><img
+                  src="assets/images/Icons/github.svg"
+                  alt="Shyft GitHub" /></a
             ></span>
           </div>
           <p class="p-para text-center text-md-start">
