--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1358,7 +1358,7 @@ html {
 
 /* Styles for gallery Page */
 .add-padd {
-  padding: 80px 100px;
+  padding: 30px 100px;
 }
 .seethrough-searchbar {
   max-width: 800px;
@@ -1489,6 +1489,16 @@ button:disabled {
     30deg,
     rgba(224, 73, 155, 1),
     rgba(89, 101, 243, 1)
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.gradient-text-hero {
+  background: -webkit-linear-gradient(
+    0deg,
+    rgba(224, 73, 155, 1) 10%,
+    rgba(89, 101, 243, 1) 30%
   );
   -webkit-background-clip: text;
   background-clip: text;
@@ -1682,6 +1692,17 @@ button:disabled {
   margin-top: 0.8rem;
 }
 
+.nft-img-container {
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+}
+
+.nft-img-container img {
+  border-radius: 20px;
+}
+
+
 @media (max-width: 1200px) {
   .portfolio-section-3 {
     padding-top: 5rem;
@@ -1769,6 +1790,12 @@ button:disabled {
     letter-spacing: 0.1em;
     margin-top: 0.8rem;
   }
+  .nft-img-container {
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+  }
+  
 }
 @media (max-width: 576px) {
   .portfolio-para-sm {
@@ -1910,6 +1937,12 @@ button:disabled {
     letter-spacing: 1px;
     word-wrap: break-word;
   }
+  .nft-img-container {
+    width: 100%;
+    height: 120px;
+    overflow: hidden;
+  }
+  
 }
 
 /* Terms Screens */
