home page design fix and some changes

--- a/src/app/modules/authentication/components/list-nft-page/list-nft-page.component.html
+++ b/src/app/modules/authentication/components/list-nft-page/list-nft-page.component.html
@@ -107,8 +107,8 @@
             <div class="nft-img-container">
               <img [src]="nft.image" />
             </div>
-            <p class="gall-para-2">{{ nft.tokenId }}</p>
-            <p class="gall-para-2" *ngIf="!nft.tokenId">Nan</p>
+            <p class="gall-para-2">{{ nft.name }}</p>
+            <p class="gall-para-2" *ngIf="!nft.name">Nan</p>
           </div>
         </div>
       </div>
