--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -68,6 +68,89 @@
   <div class="container-lg why-us">
     <div class="why-us-text-container">
       <div>
+        <h3 class="section-sub-heading">
+          Developing NFT Application Is Time Taking and Expensive
+        </h3>
+      </div>
+    </div>
+    <div class="time-taking">
+      <div class="row">
+        <div class="col-sm-12 col-md-4">
+          <div class="card time-taking-cards">
+            <div class="top-img-container text-center">
+              <img
+                class="card-img-top"
+                src="assets/images/Complex-blockchain.png"
+                alt="Card image"
+              />
+            </div>
+            <div class="card-body">
+              <div class="title-container">
+                <h4 class="card-title text-center">Complex Blockchain</h4>
+              </div>
+
+              <p class="card-text text-center">
+                Grasping Solidity, Web3.js, GraphQL, nodes, IPFS, etc. is
+                hard, time-ingesting and commonly desires a crew to cowl all
+                the skills.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4">
+          <div class="card time-taking-cards">
+            <div class="top-img-container text-center">
+              <img
+                class="card-img-top"
+                src="assets/images/Manage-nfts.png"
+                alt="Card image"
+              />
+            </div>
+
+            <div class="card-body">
+              <div class="title-container">
+                <h4 class="card-title text-center">Manage NFTs</h4>
+              </div>
+
+              <p class="card-text text-center">
+                Our hardworking team puts extra efforts managing nodes,
+                creating indexes and try to reevaluate the wheel
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4">
+          <div class="card time-taking-cards">
+            <div class="top-img-container text-center">
+              <img
+                class="card-img-top"
+                src="assets/images/market-research-1.png"
+                alt="Card image"
+              />
+            </div>
+            <div class="card-body">
+              <div class="title-container">
+                <h4 class="card-title text-center">
+                  Slow Go Market and Its Risk
+                </h4>
+              </div>
+              <p class="card-text text-center">
+                Utilizing intensely rate-limited, moderate and fragmented
+                APIs to slow down in an amazingly competitive market,
+                driving to losing clients and revenue.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid why-us-background">
+  <div class="container-lg why-us">
+    <div class="why-us-text-container">
+      <div>
         <h3 class="section-sub-heading">Why Us?</h3>
       </div>
     </div>
